# CodeAiReview

./: Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
app/api/: endpoints.py
app/core/: config.py  logging.py
app/models/: request_model.py  response_model.py
app/services/: caching_service.py  github_service.py  openai_service.py
tests/: test_endpoints.py  test_services.py
tests/mocks/: github_service_mocks.py  openai_service_mocks.py
